[package]
name = "verity_dp_ic"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.7.4"
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
ic-cdk-timers = "0.1.1"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0"
# lib = {path = "../lib" }
solabi = "0.2.0"
easy-hasher = "2.2.1"
hex = "0.4.3"
libsecp256k1 = { version = "0.7.1", default-features = false, features = ["lazy-static-context"] }
getrandom = { version = "0.2", features = ["custom"] }
sha3 = "0.10.8"
rand = { version = "0.8.5", features = ["getrandom"]}
eth-encode-packed = "0.1.0"
