[package]
name = "verity-client"
description = "Verity Client"
version = "0.0.1-alpha.1"
authors = ["Usher Labs <labs@usher.so>"]
repository = "https://github.com/usherlabs/ccamp/"
homepage = "https://www.usher.so/"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
http = "1.0"
k256 = { version = "0.13", features = ["pem"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
