[package]
name = "ic_af"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.7.4" }
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
ic-cdk-timers = "0.1.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0"
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.5" }
p256 = { version = "0.13", features = ["pem", "ecdsa"] }
lib = {path = "../lib" }
sha2 = "0.10.8"
hex = "0.4.3"
httparse = "1.8.0"
bincode = "1.3.3"
sha3 = "0.10.8"
libsecp256k1 = { version = "0.7.1", default-features = false, features = ["lazy-static-context"] }
ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", version = "0.4.1" }